--- a/templates/base.html
+++ b/templates/base.html
@@ -390,14 +390,14 @@
 <script type="text/javascript">
 
 
- //var ROOT = '/_ah/api';
+ var ROOT = '/_ah/api';
 
 
 
 
 
 
-var ROOT = 'https://gcdc2013-iogrow.appspot.com/_ah/api';
+//var ROOT = 'https://gcdc2013-iogrow.appspot.com/_ah/api';
 
 
 
