--- a/templates/base.html
+++ b/templates/base.html
@@ -389,14 +389,14 @@
 <!-- async scripts-->
 <script type="text/javascript">
 
-    var ROOT = '/_ah/api';
+    //var ROOT = '/_ah/api';
 
 
 
 
 
 
-//var ROOT = 'https://gcdc2013-iogrow.appspot.com/_ah/api';
+var ROOT = 'https://gcdc2013-iogrow.appspot.com/_ah/api';
 
 
 
