--- a/templates/accounts/note_show.html
+++ b/templates/accounts/note_show.html
@@ -5,12 +5,12 @@
     </h2>
   </div>
   <div class=" subHeaderContent">
-    <div class="pull-right sharebuttonDiv">
+    <!-- <div class="pull-right sharebuttonDiv">
       <a href="#sharingSettingsModal" class="btn blue jfk-button jfk-button-action" data-toggle="modal">
         <i class="icon-lock"></i>
         {{ _("Share") }}
       </a>
-    </div>
+    </div> -->
     <h2 class="page-title" >
       <a href="<%=uri%>" data-toggle="tooltip" id='testEdit' data-placement="bottom" title="Back to Accounts">
         <img onload="this.__gwtLastUnhandledEvent=&quot;load&quot;;" src="/static/img/clear.cache.gif" style="width: 21px; height: 21px; background-image: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAABUAAAAVCAYAAACpF6WWAAAAP0lEQVR42mNgGAXDApRT28AGIP5PCwP/08LA/9QKw/9kYLyggxaGYjMYHyApiBpoYSixSYqsyGwYzf+jgDQAAJylMNOnx10yAAAAAElFTkSuQmCC); background-position: 0px 0px; background-repeat: no-repeat no-repeat;" border="0" class="gwt-Image GI4HA0EPK cbarOpacity" aria-hidden="false">
@@ -130,15 +130,15 @@
     </div>
   </div>
   <!-- tasks cards -->
-  <div class="col-md-3 tasks-col">
+  <!-- <div class="col-md-3 tasks-col">
     <div class="row">
       <div class="col-md-12">
         <div class="portlet showCard">
-          <div class="portlet-title line">
+          <!-- <div class="portlet-title line">
             <div class="caption">
               {{_('Who\'s involved ?')}}
             </div>
-          </div>
+          </div> 
           <div class="portlet-body" id="chats">
             <div class="scroller" style="height:200x" data-always-visible="1" data-rail-visible="0">
               <div id="newTask">
@@ -163,7 +163,7 @@
             </div>
           </div>
         </div>
-      </div>
+      </div> -->
     </div>
 
   </div>
