--- a/templates/base.html
+++ b/templates/base.html
@@ -391,18 +391,22 @@
 
 
 
+
+
+function getRoot() {
+        var origin = window.location.origin;
+        var url = '';
+        if (origin.indexOf('localhost') != -1 || origin.indexOf('127.0.0') != -1) {
+            url = origin;
+        } else if (origin.indexOf('.com') != -1) {
+            url = "https://gcdc2013-iogrow.appspot.com";
+        }
+        console.log(url);
+        return url + '/_ah/api';
+}
+var ROOT = getRoot();
+// var ROOT = 'https://gcdc2013-iogrow.appspot.com/_ah/api';
 // var ROOT = '/_ah/api';
-
-
-
-
-
-
-var ROOT = 'https://gcdc2013-iogrow.appspot.com/_ah/api';
-
-
-
-
     var apisToLoad;
     var callback = function() {
 
@@ -422,6 +426,8 @@ var ROOT = 'https://gcdc2013-iogrow.appspot.com/_ah/api';
             }
         }
         apisToLoad = 2; // must match number of calls to gapi.client.load()
+        console.log("the root of endpoints");
+        console.log(ROOT);
         gapi.client.load('crmengine', 'v1', callback, ROOT);
         gapi.load('picker', {'callback': callback});
     }
@@ -604,7 +610,7 @@ m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
     ga('require', 'displayfeatures');
     ga('send', 'pageview'); 
 
-    console.log({{user.google_user_id}});
+    console.log( {{user.google_user_id}});
 
 
 
