--- a/templates/opportunities/opportunity_show.html
+++ b/templates/opportunities/opportunity_show.html
@@ -184,16 +184,21 @@
                   <div class="clearfix"></div>
                   </h3>  
                   <p ng-show="opportunity.accounts[0].id">
-                          <a ng-hide="showEdit" href="/#/accounts/show/<%=opportunity.accounts[0].id%>" style="font-size: 14px; font-weight: 700;  margin-bottom: 5px;"><%=opportunity.accounts[0].name%></a>
-                          <div class="input-icon" ng-show="showEdit">
+                          <a ng-hide="showEdit&&!opportunity.accounts" href="/#/accounts/show/<%=opportunity.accounts[0].id%>" style="font-size: 14px; font-weight: 700;  margin-bottom: 5px;"><%=opportunity.accounts[0].name%></a>
+                          <div class="input-icon" ng-show="showEdit&&opportunity.accounts">
                           <i class="fa fa-building"></i>
                           <input type="text" required  ng-model="searchAccountQuery" typeahead="accountResult as accountResult.name  for accountResult in accountsResults | filter:$viewValue | limitTo:10" typeahead-on-select="selectAccount()" class="form-control" placeholder="{{_('Account')}}">
                           </div>
                            
-                           <a ng-hide="showEdit" href="/#/contacts/show/<%=opportunity.contacts[0].id%>" style="font-size: 14px;">(  <%=opportunity.contacts[0].firstname%> <%=opportunity.contacts[0].lastname %> ) </a>  
-                          <div class="input-icon" ng-show="showEdit" style="margin-top:10px">
-                          <i class="fa fa-user"></i>
-                          <input type="text" required ng-model="searchContactQuery" typeahead="contactResult as contactResult.firstname + ' '+  contactResult.lastname for contactResult in contactsResults | filter:$viewValue | limitTo:10" typeahead-on-select="selectContact()" class="form-control" placeholder="{{_('Contact')}}">
+                           <a ng-hide="showEdit||(!opportunity.contacts&&!opportunity.contact)" href="/#/contacts/show/<%=opportunity.contacts[0].id%>" style="font-size: 14px;">(  <%=opportunity.contacts[0].firstname%> <%=opportunity.contacts[0].lastname %> ) </a>  
+                          <div class="input-icon" ng-show="showEdit&&opportunity.contacts" style="margin-top:10px">
+                              <i class="fa fa-user"></i>
+                              <input type="text" required ng-model="searchContactQuery" typeahead="contactResult as contactResult.firstname + ' '+  contactResult.lastname for contactResult in contactsResults | filter:$viewValue | limitTo:10" typeahead-on-select="selectContact()" class="form-control" placeholder="{{_('Contact')}}">
+                          </div>
+                          <a ng-hide="showEdit" ng-show="opportunity.lead" href="/#/leads/show/<%=opportunity.lead.id%>" style="font-size: 14px;">(  <%=opportunity.lead.firstname%> <%=opportunity.lead.lastname %> ) </a>  
+                          <div class="input-icon" ng-show="showEdit&&!opportunity.contacts" style="margin-top:10px">
+                              <i class="fa fa-user"></i>
+                              <input type="text" required ng-model="searchLeadQuery" typeahead="leadResult as leadResult.firstname + ' '+  leadResult.lastname for leadResult in leadsResults | filter:$viewValue | limitTo:10" typeahead-on-select="selectLead()" class="form-control" placeholder="{{_('Lead')}}">
                           </div>
                   </p>
                   <p ng-hide="showEdit" style="font-size: 20px;color: rgb(216, 74, 56);padding-right: 15px;  margin-bottom: 5px;">
