--- a/templates/base.html
+++ b/templates/base.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <!--[if IE 8]> <html lang="en" class="ie8" > <![endif]-->
 <!--[if IE 9]> <html lang="en" class="ie9" > <![endif]-->
-<!--[if !IE]><!--> <html xmlns:ng="http://angularjs.org" lang="en"> <!--<![endif]-->
+<!--[if !IE]><!-->
+<html lang="en"> <!--<![endif]-->
 
 <!-- BEGIN HEAD -->
 <head>
@@ -403,7 +404,6 @@ function getRoot() {
 var ROOT = getRoot();
 // var ROOT = 'https://gcdc2013-iogrow.appspot.com/_ah/api';
 // var ROOT = '/_ah/api';
-
     var apisToLoad;
     var callback = function() {
 
