--- a/templates/base.html
+++ b/templates/base.html
@@ -402,8 +402,13 @@
         return url + '/_ah/api';
 }
 var ROOT = getRoot();*/
-var ROOT = 'https://gcdc2013-iogrow.appspot.com/_ah/api';
-// var ROOT = '/_ah/api';
+
+//var ROOT = 'https://gcdc2013-iogrow.appspot.com/_ah/api';
+
+
+ var ROOT = '/_ah/api';
+
+
     var apisToLoad;
     var callback = function() {
 
