--- a/templates/base.html
+++ b/templates/base.html
@@ -390,7 +390,7 @@
 <!-- async scripts-->
 <script type="text/javascript">
 
-/*function getRoot() {
+function getRoot() {
         var origin = window.location.origin;
         var url = '';
         if (origin.indexOf('localhost') != -1 || origin.indexOf('127.0.0') != -1) {
@@ -401,12 +401,12 @@
         console.log(url);
         return url + '/_ah/api';
 }
-var ROOT = getRoot();*/
+var ROOT = getRoot();
 
-//var ROOT = 'https://gcdc2013-iogrow.appspot.com/_ah/api';
+// var ROOT = 'https://gcdc2013-iogrow.appspot.com/_ah/api';
 
 
- var ROOT = '/_ah/api';
+ // var ROOT = '/_ah/api';
 
 
     var apisToLoad;
